tera/src/snapshot_tests/snapshots/tera__snapshot_tests__rendering__rendering_errors@array_spread_non_array.txt.snap
---
source: tera/src/snapshot_tests/rendering.rs
expression: "&err"
input_file: tera/src/snapshot_tests/rendering_inputs/errors/array_spread_non_array.txt
---
error: Spread operator requires an array, found `undefined`
 --> array_spread_non_array.txt:1:8
  |
1 | {{ [...username] }}
  |        ^^^^^^^^
